fix button letter spacing

--- a/css/style-guide.css
+++ b/css/style-guide.css
@@ -410,7 +410,7 @@ xButtons
   padding: 8px 20px 7px 23px;
   border: 1px solid #7b8994;
   color: #7b8994;
-  letter-spacing: 4px;
+  letter-spacing: 2px;
   background-color: transparent;
 }
 
